--- a/Front/src/app/components/navbar/navbar.component.html
+++ b/Front/src/app/components/navbar/navbar.component.html
@@ -63,7 +63,7 @@
             </li>
             <li class=" dropdown-divider"></li>
             <li class=" nav-link">
-              <a class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
+              <a (click)="logOut() "class=" nav-item" href="javascript:void(0)" ngbDropdownItem>
                 Log out
               </a>
             </li>
