--- a/Front/src/app/pages/inbox/inbox.component.html
+++ b/Front/src/app/pages/inbox/inbox.component.html
@@ -1,3 +1,10 @@
 <div class=" content">
+  <div *ngIf="success != ''" class="alert alert-success alert-dismissible fade show" role="alert">
+    <strong>{{ success }}</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
+  <app-compose></app-compose>
 </div>
