--- a/Front/src/app/pages/login/login.component.html
+++ b/Front/src/app/pages/login/login.component.html
@@ -1,9 +1,16 @@
 <div class="row d-flex justify-content-center">
   <div class="col-md-4 mt-5">
     <form [formGroup]="form" (ngSubmit)="logIn()" #myForm="ngForm">
+      <div *ngIf="success != ''" class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong>{{ success }}</strong>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="success = '';">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+
       <div *ngIf="error != ''" class="alert alert-danger alert-dismissible fade show" role="alert">
         <strong>{{ error }}</strong>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="error = '';">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
