Base app finished

--- a/Front/src/app/components/compose/compose.component.html
+++ b/Front/src/app/components/compose/compose.component.html
@@ -36,7 +36,7 @@
 
           <mdb-icon fas icon="pencil-alt" class="prefix grey-text mr-2"></mdb-icon><span>Message</span>
           <div class="md-form">
-            <textarea type="text" id="message" class="form-control" rows="4" mdbInput formControlName="message"></textarea>
+            <textarea type="text" id="message" class="form-control p-2" rows="4" mdbInput formControlName="message"></textarea>
           </div>
           <h6 *ngIf="message.invalid && (message.dirty || message.touched)" class="error">
             Input Invalid
