--- a/Front/src/app/pages/inbox/inbox.component.html
+++ b/Front/src/app/pages/inbox/inbox.component.html
@@ -1,4 +1,4 @@
-<div class=" content">
+<div class="content">
   <div *ngIf="success != ''" class="alert alert-success alert-dismissible fade show" role="alert">
     <strong>{{ success }}</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -6,9 +6,23 @@
     </button>
   </div>
 
-  <app-compose></app-compose>
+  <div *ngIf="error != ''" class="alert alert-danger alert-dismissible fade show" role="alert">
+    <strong>{{ error }}</strong>
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close" (click)="error = '';">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
 
-  <div *ngFor="let mail of inbox" class="card">
-    <div class="card-body">{{ mail.message }}</div>
+  <app-compose
+    (emitSuccessMessage)="handleSuccessMessage($event)"
+    (emitErrorMessage)="handleErrorMessage($event)"
+  ></app-compose>
+
+  <div *ngFor="let mail of inbox" class="card text-white text-white bg-secondary">
+    <div class="card-body">
+      <span class="mr-5"><em>{{ mail.createdAt }}</em></span>
+      <span class="message">{{ mail.subject }}</span>
+      <a [routerLink]="['/message']" [state]="{mail: mail, permissions: [permission.VIEW, permission.UPDATE]}" class="btn btn-sm btn-info float-right"><i class="fa-solid fa-eye"></i></a>
+    </div>
   </div>
 </div>
